add falvio cookbooks

--- a/obsidian_utsav/.obsidian/workspace
+++ b/obsidian_utsav/.obsidian/workspace
@@ -9,7 +9,7 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "database_things.md",
+            "file": "cookbooks.md",
             "mode": "source",
             "backlinks": true
           }
@@ -69,7 +69,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "database_things.md",
+                "file": "cookbooks.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -88,15 +88,15 @@
   },
   "active": "aa501f0d33f5e1a8",
   "lastOpenFiles": [
+    "cookbooks.md",
+    "linux_commands.md",
+    "Start.md",
     "database_things.md",
     "postgres_long_running_queries.md",
-    "Start.md",
     "docker_compose.md",
     "Docker.md",
     "maven_dependency_convergence.md",
     "information_on_particular_claims.md",
-    "linux_commands.md",
-    "pom_errors.md",
-    "oauth_implementations.md"
+    "pom_errors.md"
   ]
 }
